# yolov8_onnx_cpp

./: .gitignore  CMakeLists.txt  README.md
inc/: yolo_utils.h
src/: main.cpp  yolo_utils.cpp
